# Inventory_System-

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  api_client.cpp  api_client.h  main.cpp  mainwindow.cpp  mainwindow.h
server/: CMakeLists.txt  database.cpp  database.h  inventory.cpp  inventory.h  logger.h  main.cpp  server.cpp  server.h
